--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "firebase": "^5.9.2",
     "nuxt": "^2.4.5",
     "vue-localstorage": "^0.6.2"
+  },
+  "devDependencies": {
+    "core-js": "^2.6.5"
   }
 }
